# yhat_webserver

./: .gitignore  Dockerfile  Dockerfile.local  appspec-api-dev.yml.old  appspec-builder-dev.yml.old  appspec.yml  buildspec-api-dev-ecs.yml  buildspec-api-dev.yml  buildspec-api-dev.yml.old  buildspec-builder-dev.yml  buildspec-builder-dev.yml.old  buildspec-ecs.yml  buildspec.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test_on_aws.yml
app/: api.py  main.py
app/auth/: auth_bearer.py  auth_handler.py
app/db/: crud.py  database.py  model.py  schema.py
app/helpers/: api_helper.py  asyncwrapper.py  autocomplete.py  boto_helper.py  email_helper.py  file_helper.py  logger.py  rabbit_helper.py  settings.py
app/routers/: build.py  model.py  prediction.py  repository.py  run.py  signed_url.py  user.py
app/service/builder_client/: builder_client.py
app/service/builder_server/: builder_server.py  docker_builder.py  lambda_builder.py
app/service/builder_server/docker_base/: Dockerfile
app/service/builder_server/docker_template/: Dockerfile
app/service/builder_server/lambda_template/: app.py
app/service/builder_server/lambda_template/docker_vscode/: launch.json  settings.json
app/tests/: conftest.py  test_01_user.py  test_02_repository.py  test_03_build.py  test_04_email.py  test_05_predict.py  test_06_model.py  test_07_run.py
deployment_scripts/: before_install.sh  before_install_api.sh  before_install_builder.sh  ec2_install.sh  run_tests.sh  start_builder.sh  start_server.sh  stop_server.sh
